--- a/note.css
+++ b/note.css
@@ -12,13 +12,13 @@ body {
 }
 
 .navbar-brand {
-    color: #ffffff;
+    color: #756ed8;
     font-size: 1.5rem;
     font-weight: bold;
 }
 
 .navbar-toggler {
-    background-color: #ffffff;
+    background-color: #be9c9c;
 }
 
 .navbar-toggler-icon {
